# src/main/java/com/mosify/domain/model/User.java
@@ -9,4 +9,6 @@ import java.util.UUID;
 public class User {
     UUID id;
     String name;
+    String username;
+    String password;
 }
