# src/main/java/com/mosify/infrastructure/out/db/model/UserEntity.java
@@ -19,4 +19,10 @@ public class UserEntity {
 
     @Column(nullable = false)
     private String name;
+
+    @Column(unique = true, nullable = false)
+    private String username;
+
+    @Column(nullable = false)
+    private String password;
 }
