# src/main/java/com/mosify/infrastructure/out/db/user/UserJpaRepository.java
@@ -4,5 +4,8 @@ import com.mosify.infrastructure.out.db.model.UserEntity;
 import org.springframework.data.jpa.repository.JpaRepository;
 import java.util.UUID;
 
+import java.util.Optional;
+
 public interface UserJpaRepository extends JpaRepository<UserEntity, UUID> {
+    Optional<UserEntity> findByUsername(String username);
 }
